--- a/EdiListFX/src/de/vbl/im/view/GeschaeftsObjekt.fxml
+++ b/EdiListFX/src/de/vbl/im/view/GeschaeftsObjekt.fxml
@@ -42,8 +42,8 @@
 									<children>
 										<TableView fx:id="tvVerwendungen" prefHeight="120.0" tableMenuButtonVisible="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
 											<columns>
-												<TableColumn fx:id="tcEdiNr" maxWidth="100.0" minWidth="44.0" prefWidth="100.0" text="I-Nr." />
-<TableColumn fx:id="tcIszenario" maxWidth="500.0" prefWidth="-1.0" text="Integrationsszenario" /><TableColumn fx:id="tcKonfiguration" maxWidth="500.0" prefWidth="-1.0" text="Konfiguration" visible="false" />
+												<TableColumn fx:id="tcInNr" maxWidth="100.0" minWidth="44.0" prefWidth="100.0" text="I-Nr." />
+<TableColumn fx:id="tcInSzenario" maxWidth="500.0" prefWidth="-1.0" text="Integrationsszenario" /><TableColumn fx:id="tcKonfiguration" maxWidth="500.0" prefWidth="-1.0" text="Konfiguration" visible="false" />
 												<TableColumn fx:id="tcSender" maxWidth="500.0" minWidth="150.0" prefWidth="-1.0" text="Sender" />
 												<TableColumn fx:id="tcEmpfaenger" maxWidth="500.0" minWidth="150.0" prefWidth="-1.0" text="Empfänger" />
 												<TableColumn fx:id="tcDatumAb" maxWidth="75.0" minWidth="75.0" prefWidth="75.0" text="Ab-Datum" visible="false" />
