--- a/EdiListFX/src/de/vbl/im/view/Ansprechpartner.fxml
+++ b/EdiListFX/src/de/vbl/im/view/Ansprechpartner.fxml
@@ -87,6 +87,8 @@
 <children>
                   <TitledPane animated="false" maxHeight="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefWidth="933.0" text="Verwendungsnachweis" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <content>
+<VBox>
+<children>
                               <TableView fx:id="tvKomponenten" minHeight="0.0" minWidth="0.0" tableMenuButtonVisible="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
                                  <columns>
                                     <TableColumn fx:id="tcKomponentenName" editable="false" text="Komponente" />
@@ -96,7 +98,17 @@
 <columnResizePolicy>
 <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
 </columnResizePolicy>
-                              </TableView>
+                              </TableView><TableView fx:id="tvInSzenario" minHeight="0.0" minWidth="0.0" tableMenuButtonVisible="true">
+<columnResizePolicy>
+<TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+</columnResizePolicy>
+<columns>
+<TableColumn fx:id="tcIsNr" editable="false" maxWidth="50.0" minWidth="41.0" prefWidth="50.0" text=" IS-Nr." />
+<TableColumn fx:id="tcInSzenario" editable="false" prefWidth="548.0" text="  Integrationsszenario" />
+</columns>
+</TableView>
+</children>
+</VBox>
                      </content>
                   </TitledPane>
 </children>
