--- a/EdiListFX/src/de/vbl/im/view/GeschaeftsObjekt.fxml
+++ b/EdiListFX/src/de/vbl/im/view/GeschaeftsObjekt.fxml
@@ -10,8 +10,8 @@
 			<items>
 				<ToolBar prefWidth="200.0">
   					<items>
-    					<Button fx:id="btnSpeichern" mnemonicParsing="false" onAction="#speichern" text="Änderungen speichern" />
-    					<Button fx:id="btnLoeschen" mnemonicParsing="false" onAction="#loeschen" text=" löschen" />
+    					<Button fx:id="btnSpeichern" minWidth="80.0" mnemonicParsing="false" onAction="#speichern" prefWidth="100.0" text="Speichern" />
+    					<Button fx:id="btnLoeschen" minWidth="80.0" mnemonicParsing="false" onAction="#loeschen" prefWidth="100.0" text="Löschen" />
 	  				</items>
 				</ToolBar>
 				<AnchorPane minHeight="0.0" minWidth="0.0">
@@ -26,8 +26,8 @@
 										<ListView fx:id="lvAnsprechpartner" disable="true" prefWidth="200.0" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="40.0" />
 										<TextArea fx:id="taBeschreibung" layoutX="89.0" layoutY="58.0" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="400.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0" />
 										<Label alignment="CENTER" disable="true" layoutX="6.0" layoutY="64.0" text="Ansprechpartner:" AnchorPane.leftAnchor="12.0" AnchorPane.topAnchor="40.0" />
-										<Button fx:id="aaaa" disable="true" layoutX="14.0" layoutY="74.0" mnemonicParsing="false" prefWidth="80.0" text="hinzufügen" AnchorPane.leftAnchor="14.0" />
-										<Button disable="true" layoutX="14.0" layoutY="108.0" mnemonicParsing="false" prefWidth="80.0" text="entfernen" AnchorPane.leftAnchor="14.0" />
+										<Button fx:id="aaaa" disable="true" layoutX="14.0" layoutY="74.0" mnemonicParsing="false" prefWidth="80.0" text="Hinzufügen" AnchorPane.leftAnchor="14.0" />
+										<Button disable="true" layoutX="14.0" layoutY="108.0" mnemonicParsing="false" prefWidth="80.0" text="Entfernen" AnchorPane.leftAnchor="14.0" />
 									</children>
 								</AnchorPane>
 							</content>
