Excel-Export fertig

--- a/EdiListFX/src/de/vbl/im/controller/view/Integration.fxml
+++ b/EdiListFX/src/de/vbl/im/controller/view/Integration.fxml
@@ -290,10 +290,10 @@
                                                             <Label alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" text="⌀ Größe:" GridPane.columnIndex="4">
                                                                <GridPane.margin><Insets /></GridPane.margin>
                                                             </Label>
-                                                            <TextField fx:id="m_GroesseMsg" GridPane.columnIndex="5" />
+                                                            <TextField fx:id="m_GroesseMsg" alignment="CENTER_RIGHT" GridPane.columnIndex="5" />
                                                             <ChoiceBox fx:id="m_GroesseEinheit" prefWidth="150.0" GridPane.columnIndex="6" />
                                                             <Label alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" text="Max.Größe:" GridPane.columnIndex="7" />
-                                                            <TextField fx:id="m_MaxGroesseMsg" GridPane.columnIndex="8" />
+                                                            <TextField fx:id="m_MaxGroesseMsg" alignment="CENTER_RIGHT" GridPane.columnIndex="8" />
                                                             <ChoiceBox fx:id="m_MaxGroesseEinheit" prefWidth="150.0" GridPane.columnIndex="9" />
                                                                               <HBox spacing="10.0" GridPane.columnIndex="1" GridPane.columnSpan="9" GridPane.rowIndex="2">
                                                                                  <children>
